1. Collection API Улучшения[#121721]