@@ -22,11 +22,11 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1/sk1", "k1/sk2");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k1")),
-                new Departments.Org(Arrays.asList("k1", "sk1")),
-                new Departments.Org(Arrays.asList("k1", "sk2"))
+        List<String> input = List.of("k1/sk1", "k1/sk2");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k1")),
+                new Departments.Org(List.of("k1", "sk1")),
+                new Departments.Org(List.of("k1", "sk2"))
         );
         List<Departments.Org> result = deps.convert(input);
         assertThat(result, is(expect));
@@ -38,11 +38,11 @@ public class DepartmentsTest {
     @Test
     public void whenAsc() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1/sk1", "k2");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k1")),
-                new Departments.Org(Arrays.asList("k1", "sk1")),
-                new Departments.Org(Arrays.asList("k2"))
+        List<String> input = List.of("k1/sk1", "k2");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k1")),
+                new Departments.Org(List.of("k1", "sk1")),
+                new Departments.Org(List.of("k2"))
         );
         List<Departments.Org> result = deps.sortAsc(deps.convert(input));
         assertThat(result, is(expect));
@@ -54,11 +54,11 @@ public class DepartmentsTest {
     @Test
     public void whenDesc() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1/sk1", "k2");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k2")),
-                new Departments.Org(Arrays.asList("k1")),
-                new Departments.Org(Arrays.asList("k1", "sk1"))
+        List<String> input = List.of("k1/sk1", "k2");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k2")),
+                new Departments.Org(List.of("k1")),
+                new Departments.Org(List.of("k1", "sk1"))
         );
         List<Departments.Org> result = deps.sortDesc(deps.convert(input));
         assertThat(result, is(expect));
