@@ -22,12 +22,16 @@ public class SortUserTest {
     @Test
     public void whenListThenTreeSet() {
         SortUser arrange = new SortUser();
-        List<User> list = new ArrayList<>(Arrays.asList(
+        List<User> list = new ArrayList<>(List.of(
                 new User("Anton", 48),
                 new User("Vasily", 17),
                 new User("Petr", 36)
-                ));
-        assertThat(arrange.sort(list).iterator().next().getName(), is("Vasily"));
+        ));
+        assertThat(arrange.sort(list), is(Set.of(
+                new User("Vasily", 17),
+                new User("Petr", 36),
+                new User("Anton", 48)
+        )));
     }
 
     /**
@@ -36,16 +40,18 @@ public class SortUserTest {
     @Test
     public void whenListSortByLengthThen() {
         SortUser arrange = new SortUser();
-        List<User> list = new ArrayList<>(Arrays.asList(
+        List<User> list = new ArrayList<>(List.of(
                 new User("Сергей", 25),
                 new User("Иван", 30),
                 new User("Сергей", 20),
                 new User("Иван", 25)
         ));
-        List<String> result = new ArrayList<>();
-        arrange.sortNameLength(list).forEach(user -> result.add(user.getName()));
-        assertThat(result, is(
-                new ArrayList<>(Arrays.asList("Иван", "Иван", "Сергей", "Сергей"))));
+        assertThat(arrange.sortNameLength(list), is(List.of(
+                new User("Иван", 30),
+                new User("Иван", 25),
+                new User("Сергей", 25),
+                new User("Сергей", 20)
+        )));
     }
 
     /**
@@ -54,19 +60,17 @@ public class SortUserTest {
     @Test
     public void whenListSortByAllFieldsThen() {
         SortUser arrange = new SortUser();
-        List<User> list = new ArrayList<>(Arrays.asList(
+        List<User> list = new ArrayList<>(List.of(
                 new User("Сергей", 25),
                 new User("Иван", 30),
                 new User("Сергей", 20),
                 new User("Иван", 25)
         ));
-        StringBuilder result = new StringBuilder();
-        arrange.sortByAllFields(list).forEach(user -> {
-            result.append(user.getName());
-            result.append(" ");
-            result.append(user.getAge());
-            result.append(" / ");
-        });
-        assertThat(result.toString(), is("Иван 25 / Иван 30 / Сергей 20 / Сергей 25 / "));
+        assertThat(arrange.sortByAllFields(list), is(List.of(
+                new User("Иван", 25),
+                new User("Иван", 30),
+                new User("Сергей", 20),
+                new User("Сергей", 25)
+        )));
     }
 }
